--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "gulp-rename": "^1.2.0"
   },
   "devDependencies": {
+    "@ionic/cli-plugin-gulp": "1.0.1",
+    "@ionic/cli-plugin-ionic1": "2.0.0",
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
+    "node-sass": "4.5.3",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
